objects/Opportunity/fields/Billing_Address_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Change_Requested__c</fullName>
    <description>Billing address change request by customer when they return purchase order</description>
    <label>Billing Address Change Requested</label>
    <type>TextArea</type>
</CustomField>