objects/Opportunity/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>PO Number returned from customer in docusign or initials for invoice acknowledgement</description>
    <label>PO Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>