objects/Opportunity/fields/Shipping_Address_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Change_Request__c</fullName>
    <description>Shipping address change requested by customer when they return the purchase order</description>
    <label>Shipping Address Change Request</label>
    <type>TextArea</type>
</CustomField>