objects/Opportunity/fields/Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Shipping Contact)</relationshipLabel>
    <relationshipName>Shipping_Contact_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>